# geometry-central

./: .gitmodules  .travis.yml  CMakeLists.txt  TODO.txt
docs/: README.md  mkdocs.yml  mutable_mesh_docs.md
docs/docs/: index.md
docs/docs/halfedge_mesh/: basics.md  boundaries.md  containers.md  delta_complex.md  internals.md  io.md  mutation.md  navigation.md
docs/docs/linear_algebra/: matrix_types.md  utilities.md
docs/docs/media/: geometry_inheritance.ai
docs/docs/numerical/: linear_algebra_utilities.md  linear_solvers.md  matrix_types.md
docs/docs/surface/geometry/: geometry.md  quantities.md
docs/docs/surface/halfedge_mesh/: basics.md  boundaries.md  containers.md  delta_complex.md  elements.md  internals.md  io.md  mutation.md  navigation.md
docs/docs/utilities/: misc.md  vector2.md  vector3.md
include/geometrycentral/: halfedge_data_types.ipp  halfedge_mesh.h  halfedge_mesh.ipp  halfedge_pointer_types.h  halfedge_pointer_types.ipp  mesh_graph_algorithms.h  ply_wrapper.h  utilities.h
include/geometrycentral/algorithms/: detect_symmetry.h  direction_fields.h  discrete_operators.h  exact_polyhedral_geodesics.h  fast_marching_method.h  mesh_graph_algorithms.h  mesh_ray_tracer.h
include/geometrycentral/geometry/: edge_length_geometry.h  geometry.h  geometry.ipp  geometry_cache.h  intrinsic_geometry.h
include/geometrycentral/mesh/: halfedge_containers.h  halfedge_containers.ipp  halfedge_data_types.h  halfedge_data_types.ipp  halfedge_element_types.h  halfedge_element_types.ipp  halfedge_iterators.h  halfedge_iterators.ipp  halfedge_logic_templates.ipp  halfedge_mesh.h  halfedge_mesh.ipp  halfedge_mesh_data_transfer.h  halfedge_mesh_data_transfer.ipp  halfedge_pointer_types.h  halfedge_pointer_types.ipp  mesh_embedded_curve.h  meshio.h  ply_halfedge_mesh_data.h  ply_wrapper.h  polygon_soup_mesh.h
include/geometrycentral/numerical/: linear_algebra_utilities.h  linear_algebra_utilities.ipp  linear_solvers.h  suitesparse_utilities.h
include/geometrycentral/surface/: detect_symmetry.h  direction_fields.h  discrete_operators.h  edge_length_geometry.h  embedded_geometry_interface.h  exact_polyhedral_geodesics.h  extrinsic_geometry_interface.h  fast_marching_method.h  geometry.h  geometry.ipp  geometry_base.h  geometry_cache.h  halfedge_containers.h  halfedge_containers.ipp  halfedge_element_types.h  halfedge_element_types.ipp  halfedge_factories.h  halfedge_iterators.ipp  halfedge_logic_templates.ipp  halfedge_mesh.h  halfedge_mesh.ipp  heat_method_distance.h  intrinsic_geometry.h  intrinsic_geometry_interface.h  mesh_embedded_curve.h  mesh_graph_algorithms.h  mesh_ray_tracer.h  meshio.h  ply_halfedge_mesh_data.h  ply_halfedge_mesh_data.ipp  polygon_soup_mesh.h  surface_point.h  surface_point.ipp  vector_heat_method.h  vertex_position_geometry.h
include/geometrycentral/utilities/: combining_hash_functions.h  curve.ipp  dependent_quantity.h  dependent_quantity.ipp  disjoint_sets.h  quaternion.h  unit_vector3.h  utilities.h  vector2.h  vector2.ipp  vector3.h  vector3.ipp
src/: CMakeLists.txt  direction_fields.cpp  eigenproblem_solvers.cpp  exact_polyhedral_geodesics.cpp  halfedge_mesh.cpp  meshio.cpp  positive_definite_solvers.cpp  suitesparse_utilities.cpp
src/algorithms/: detect_symmetry.cpp  direction_fields.cpp  discrete_operators.cpp  exact_polyhedral_geodesics.cpp  fast_marching_method.cpp  mesh_graph_algorithms.cpp  mesh_ray_tracer.cpp
src/geometry/: dependent_quantity.cpp  edge_length_geometry.cpp  geometry.cpp  geometry_cache.cpp  intrinsic_geometry.cpp
src/mesh/: halfedge_iterators.cpp  halfedge_mesh.cpp  halfedge_mesh_data_transfer.cpp  halfedge_pointer_types.cpp  mesh_embedded_curve.cpp  meshio.cpp  ply_halfedge_mesh_data.cpp  ply_wrapper.cpp  polygon_soup_mesh.cpp
src/numerical/: eigenproblem_solvers.cpp  linear_solvers.cpp  positive_definite_solvers.cpp  qr_solvers.cpp  square_solvers.cpp  suitesparse_utilities.cpp
src/surface/: dependent_quantity.cpp  detect_symmetry.cpp  direction_fields.cpp  discrete_operators.cpp  edge_length_geometry.cpp  embedded_geometry_interface.cpp  exact_polyhedral_geodesics.cpp  extrinsic_geometry_interface.cpp  fast_marching_method.cpp  geometry.cpp  geometry_base.cpp  geometry_cache.cpp  halfedge_factories.cpp  halfedge_mesh.cpp  heat_method_distance.cpp  intrinsic_geometry.cpp  intrinsic_geometry_interface.cpp  mesh_embedded_curve.cpp  mesh_graph_algorithms.cpp  mesh_ray_tracer.cpp  meshio.cpp  ply_halfedge_mesh_data.cpp  polygon_soup_mesh.cpp  surface_centers.cpp  vector_heat_method.cpp  vertex_position_geometry.cpp
src/utilities/: disjoint_sets.cpp  quaternion.cpp  unit_vector3.cpp  utilities.cpp  vector2.cpp  vector3.cpp
test/: CMakeLists.txt
test/include/: load_test_meshes.h
test/src/: halfedge_geometry_test.cpp  halfedge_mesh_test.cpp  halfedge_mutation_test.cpp  linear_algebra_test.cpp  load_test_meshes.cpp  main_test.cpp
(+1 files in other folders)
